--- a/iwapp_address/iwapp_address/doctype/iwapp_pincode_details/iwapp_pincode_details.json
+++ b/iwapp_address/iwapp_address/doctype/iwapp_pincode_details/iwapp_pincode_details.json
@@ -1,7 +1,7 @@
 {
  "actions": [],
  "allow_rename": 1,
- "creation": "2024-04-02 20:24:18.024579",
+ "creation": "2024-04-05 10:46:44.046646",
  "default_view": "List",
  "doctype": "DocType",
  "editable_grid": 1,
@@ -52,10 +52,10 @@
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2024-04-02 20:24:18.024579",
+ "modified": "2024-04-05 10:46:44.046646",
  "modified_by": "Administrator",
  "module": "iWapp-Address",
- "name": "Caits Pincode Details",
+ "name": "Iwapp Pincode Details",
  "owner": "Administrator",
  "permissions": [],
  "sort_field": "modified",
